# hello

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.db  pyproject.toml  requirements.txt  sql_api.db  sql_app.db
api/: crud.py  database.py  main.py  models.py  schemas.py  student.txt
notebooks/: notes.ipynb
tests/: tests.py
