[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
httpx = "^0.23.3"
pytest = "^7.2.1"
sqlalchemy = "^2.0.1"
psycopg2-binary = "^2.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ipykernel = "^6.21.1"


[tool.poetry.group.qa.dependencies]
black = "^23.1.0"
mypy = "^0.991"
ruff = "^0.0.240"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
